jstat's CGCT is 5 percent higher than the pause time in -Xlog:gc.

XMLWordPrintable

    • gc
    • b01
    • generic
    • generic

      When running Java applications with -XX:+UseConcMarkSweepGC, jstat's CGCT is 5 percent higher than the pause time in -Xlog:gc.

      Steps to Reproduce
      Run the attached application.
      java -Xms64m -Xmx64m -Xlog:gc CMSGCALot 64

      Expected Result
      jstat's CGCTis approximately equal to the pause time in -Xlog:gc.

      Actual Result
      jstat's CGCT is 5 percent higher than the pause time in -Xlog:gc.

      jstat
          S0 S1 E O M CCS YGC YGCT FGC FGCT CGC CGCT GCT
          0.00 0.00 42.33 100.00 75.46 62.08 422 0.080 5934 87.779 5874 7.824 95.683

      -Xlog:gc
          [0.247s][info][gc] GC(2) Pause Initial Mark 33M->33M(61M) 1.075ms
          [0.257s][info][gc] GC(2) Pause Remark 42M->42M(61M) 1.956ms
          ...

          [144.450s][info][gc] GC(9517) Pause Initial Mark 43M->43M(61M) 0.230ms
          [144.457s][info][gc] GC(9517) Pause Remark 61M->61M(61M) 2.176ms

      Aggregating the gclog, the number of CMS cycle is 5874,
      and the sum of CMS pause time is 7392.646 ms
      jstat's CGC value is equal, but CGCT value is 5.8 percent higher than -Xlog:gc.

            Assignee:
            Richard Reingruber
            Reporter:
            Kimura Yukihiro
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: