8300742: jstat's CGCT is 5 percent higher than the pause time in -Xlog:gc.

Reviewed-by: rrich